fix text spacing for small width screen

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -38,12 +38,17 @@
     font-size: 16px;
     padding-left: 80px;
     padding-top: 70px;
+    user-select: none;
 }
 
 /* small screen size - shows cat under text */
 @media only screen and (max-width: 740px) {
     .home{
         flex-direction: column;
+    }
+
+    .text{
+        width: 60% !important;
     }
 
     .cat{
