--- a/src/pages/Stylesheet.css
+++ b/src/pages/Stylesheet.css
@@ -13,7 +13,7 @@
     font-style: normal;
     margin-left: 60px;
     margin-top: 100px;
-    margin-right: 60px;
+    margin-right: 70px;
     width: 360px;
     text-align: left;
     line-height: 1.2;
